# stock-availability-checker

./: Cargo.toml  README.md  alert_voice.py
src/: alertor.rs  error.rs  handler.rs  main.rs
